image references updated

--- a/adaptive_reinforcement_learning_iot.html
+++ b/adaptive_reinforcement_learning_iot.html
@@ -32,7 +32,7 @@
           
         </p>  
         <a href="https://youtu.be/EXs3nHwLIt0">
-          <img src="images/house_robot.png" alt="Watch the video" style="height: 160px;" />
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/house_robot.png" alt="Watch the video" style="height: 160px;" />
         </a>
         <p>
           <a href="https://youtu.be/EXs3nHwLIt0">YouTube video</a>
