--- a/artificial_general_intelligence.html
+++ b/artificial_general_intelligence.html
@@ -40,7 +40,7 @@
           Actually, Artificial General Intelligence (AGI) is the old AI too. The early champions of AI envisioned machines that had a wide variety of human capabilities. That proved to be way harder than expected, and so research efforts focused on narrower problems that could show measurable progress within the span of a single research grant. 
         </p>
         <br>
-        <img src="images/sleeping_pup.JPG" style="width: 440px;" />
+        <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/sleeping_pup.JPG" style="width: 440px;" />
         <center><em><strong>One measure of intelligence is the ability to consistently achieve a high reward state. Like this one.</strong></em></center>
         <br>
         <p>
@@ -66,7 +66,7 @@
           The downside of specific tasks, whether of athletics or intelligence, is that they inevitably emphasize just a few aspects of a complex phenomenon. Depending on the test you choose, the results will be very different. AlphaGo would be helpless at piloting an automobile. Michael Jordan is one of the best basketball players ever, but he was unimpressive at baseball. There is even an image categorization task in which <a href="https://www.ncbi.nlm.nih.gov/pubmed/24408657">rats routinely beat humans</a> because the humans overthink, looking for a pattern where there is only randomness. The choice of task can completely change what we mean by intelligence.
         </p>
         <a href="https://en.wikipedia.org/wiki/Decathlon">
-          <img src="images/decathlon.png" style="width: 440px;" />
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/decathlon.png" style="width: 440px;" />
         </a>
         <center><em><strong>The decathlon tests several different dimensions of athleticism. A general machine learning benchmark will do the same.</strong></em></center>
         <br>
@@ -93,7 +93,7 @@
         </p>
         <br>
         <a href="https://arxiv.org/pdf/1701.08734.pdf">
-          <img src="images/pathnet_learning.png" style="width: 440px;" />
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/pathnet_learning.png" style="width: 440px;" />
         </a>
         <center><em><strong>Pathnet trains for one video game by playing another.</strong></em></center>
         <br>
