--- a/becca_8_release.html
+++ b/becca_8_release.html
@@ -29,7 +29,7 @@
       <section id="main_content" class="inner">
         
         <a href="https://github.com/brohrer/becca">
-          <img src="images/logo_plate.png" alt="Becca" style="height: 125px;" />
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/logo_plate.png" alt="Becca" style="height: 125px;" />
         </a>
         
         <p>
@@ -49,7 +49,7 @@
           the hardest working parts into C. Those bits run very fast.
         </p>
         <a href="https://github.com/brohrer/becca">
-          <img src="images/becca_8_performance.png" alt="Becca" style="height: 350px;" />
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/becca_8_performance.png" alt="Becca" style="height: 350px;" />
         </a>
         <p> &nbsp </p>
 
