--- a/blog_table.html
+++ b/blog_table.html
@@ -52,7 +52,7 @@
         </p>
         <p style="text-align:center;">
         <img title="Temperature measurements over 5 hours"
-          src="images/rate_of_change/measurements.png"
+          src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/rate_of_change/measurements.png"
           alt="Temperature measurements over 5 hours"
           style="width: 600px;">
         </p>
@@ -75,7 +75,7 @@
 
         <p style="text-align:center;">
         <img title="Forward difference method illustrated"
-          src="images/rate_of_change/forward_difference.png"
+          src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/rate_of_change/forward_difference.png"
           alt="Forward difference method illustrated"
           style="width: 600px;">
         </p>
@@ -109,7 +109,7 @@
         <h3>Backward difference</h3>
         <p style="text-align:center;">
         <img title="Backward difference method illustrated"
-          src="images/rate_of_change/backward_difference.png"
+          src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/rate_of_change/backward_difference.png"
           alt="Backward difference method illustrated"
           style="width: 600px;">
         </p>
@@ -135,7 +135,7 @@
         <h3>Center difference</h3>
         <p style="text-align:center;">
         <img title="Center difference method illustrated"
-          src="images/rate_of_change/center_difference.png"
+          src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/rate_of_change/center_difference.png"
           alt="Center difference method illustrated"
           style="width: 600px;">
         </p>
@@ -171,7 +171,7 @@
         <h3>When to use which</h3>
         <p style="text-align:center;">
         <img title="Difference method comparison"
-          src="images/rate_of_change/difference_comparison.png"
+          src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/rate_of_change/difference_comparison.png"
           alt="Difference method_comparison"
           style="width: 600px;">
         </p>
