--- a/correcting_for_peeking.html
+++ b/correcting_for_peeking.html
@@ -131,7 +131,7 @@
         </p>
         <p style="text-align: center;">
         <img title="Running violations of the 95% significance threshold"
-          src="images/correcting_for_peeking/running_violations.png"
+          src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/correcting_for_peeking/running_violations.png"
           alt="Plot of fraction of statistically significant experiments
             vs. number of observations.
             Observations vary between 0 and 100 thousand.
@@ -168,7 +168,7 @@
         </p>
         <p style="text-align:center;">
         <img title="Cumulative violations of the 95% significance threshold"
-          src="images/correcting_for_peeking/cumulative_violations.png"
+          src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/correcting_for_peeking/cumulative_violations.png"
           alt="Plot of cumulative fraction of statistically
             significant experiments
             vs. number of observations.
@@ -216,7 +216,7 @@
         </p>
         <p style="text-align:center;">
         <img title="Equation 11 from the paper"
-          src="images/correcting_for_peeking/eq_11.png"
+          src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/correcting_for_peeking/eq_11.png"
           alt="Equation describing the relationship between the
           pooled variance, point estimate of sample differences,
           number of observations collected to lambda, the reciprocal
@@ -307,7 +307,7 @@
         <p style="text-align:center;">
         <img title="Cumulative violations of the 95% significance threshold,
           corrected for peeking"
-          src="images/correcting_for_peeking/corrected_violations.png"
+          src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/correcting_for_peeking/corrected_violations.png"
           alt="Plot of cumulative fraction of statistically
             significant experiments
             vs. number of observations, corrected for continuous peeking
