--- a/cosine_based_detection.html
+++ b/cosine_based_detection.html
@@ -21,7 +21,7 @@
 
         <p style="text-align:center;">
           <img title="Convolution showing poor feature detection"
-            src="images/cbd/oo_not_match.gif"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/cbd/oo_not_match.gif"
             alt="Convolution showing poor feature detection"
             style="height: 300px;">
         </p>
@@ -38,7 +38,7 @@ c) a large square wave
 d) a small square wave
         <p style="text-align:center;">
           <img title="Convolution showing poor feature detection"
-            src="images/cbd/oo_not_match.gif"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/cbd/oo_not_match.gif"
             alt="Convolution showing poor feature detection"
             style="height: 300px;">
         </p>
@@ -50,7 +50,7 @@ b) the negative of the feature
 c) and d) two non-matching features.
         <p style="text-align:center;">
           <img title="Convolution showing poor feature detection"
-            src="images/cbd/pp_match.gif"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/cbd/pp_match.gif"
             alt="Convolution showing poor feature detection"
             style="height: 300px;">
         </p>
@@ -75,7 +75,7 @@ Here's what the same feature detection problem looks like using cosine distance.
 A kind of success.
         <p style="text-align:center;">
           <img title="Convolution showing poor feature detection"
-            src="images/cbd/qq_cos_match.gif"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/cbd/qq_cos_match.gif"
             alt="Convolution showing poor feature detection"
             style="height: 300px;">
         </p>
@@ -86,7 +86,7 @@ Here is the same example, with cosine similarity raised to the 16th power, that 
 Much better.
         <p style="text-align:center;">
           <img title="Convolution showing poor feature detection"
-            src="images/cbd/rr_cos_match_power.gif"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/cbd/rr_cos_match_power.gif"
             alt="Convolution showing poor feature detection"
             style="height: 300px;">
         </p>
@@ -97,7 +97,7 @@ Here's the whole story:
 When we test scale invariance with q = .01, we see a good match against the feature, its negative, and its 50% magnitude. The 5% magnitude version doesn't make a blip though. It's too small to be interesting.
         <p style="text-align:center;">
           <img title="Convolution showing poor feature detection"
-            src="images/cbd/ss_scd.gif"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/cbd/ss_scd.gif"
             alt="Convolution showing poor feature detection"
             style="height: 300px;">
         </p>
@@ -107,7 +107,7 @@ If we want to make one more tweak, we can propagate the sign from the dot produc
 That results in this nice behavior.
         <p style="text-align:center;">
           <img title="Convolution showing poor feature detection"
-            src="images/cbd/tt_scd_scale.gif"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/cbd/tt_scd_scale.gif"
             alt="Convolution showing poor feature detection"
             style="height: 300px;">
         </p>
