--- a/cpp_resources.html
+++ b/cpp_resources.html
@@ -70,7 +70,7 @@
 
         <a href="https://m.youtube.com/playlist?list=PLAE85DE8440AA6B83">
         <h4>Bucky's C++ Programming Tutorials</h4>
-        <img src="images/cpp_buckys.png" width=400
+        <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/cpp_buckys.png" width=400
           alt="YouTube Video playlist screenshot">
         </a>
         <p>
@@ -80,7 +80,7 @@
 
         <a href="https://www.youtube.com/playlist?list=PLlrATfBNZ98dudnM48yfGUldqGD0S4FFb">
         <h4>The Cherno YouTube channel</h4>
-        <img src="images/cpp_cherno.png" width=400
+        <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/cpp_cherno.png" width=400
           alt="YouTube Video playlist screenshot">
         </a>
         <p>
@@ -92,7 +92,7 @@
 
         <a href="https://www.youtube.com/watch?v=vLnPwxZdW4Y">
         <h4>FreeCodeCamp</h4>
-        <img src="images/cpp_freecodecamp.png" width=400
+        <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/cpp_freecodecamp.png" width=400
           alt="YouTube Video screenshot">
         </a>
         <p>
@@ -108,7 +108,7 @@
 
         <a href="http://www.cplusplus.com/doc/tutorial/">
         <h4>cplusplus.com</h4>
-        <img src="images/cpp_cplusplus.png" width=400
+        <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/cpp_cplusplus.png" width=400
           alt="c plus plus dot com screenshot">
         </a>
         <p>
@@ -119,7 +119,7 @@
 
         <a href="https://www.learncpp.com/">
         <h4>learncpp.com</h4>
-        <img src="images/cpp_learncpp.png" width=400
+        <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/cpp_learncpp.png" width=400
           alt="learn c p p dot com screenshot">
         </a>
         <p>
@@ -128,7 +128,7 @@
 
         <a href="https://www.w3schools.com/cpp/">
         <h4>w3schools</h4>
-        <img src="images/cpp_w3schools.png" width=400
+        <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/cpp_w3schools.png" width=400
           alt="w 3 schools dot com screenshot">
         </a>
         <p>
