--- a/data_files.html
+++ b/data_files.html
@@ -86,7 +86,7 @@ json_dict = json.loads(json_formatted_string)
 json_formatted_string = json.dumps(json_dict)</code></pre>
         </p>
           <img title="Hi Ryan!        https://twitter.com/_brohrer_/status/1195844296643092480?s=20"
-            src="images/image_processing/hi_ryan.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/image_processing/hi_ryan.png"
             alt="Hi Ryan!"
             style="height: 3px;">
 
