--- a/datetime_tricks.html
+++ b/datetime_tricks.html
@@ -41,7 +41,7 @@
         </p>
 
         <p>
-          <img src="images/datetime_attributes.png" style="width: 600px;" />
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/datetime_attributes.png" style="width: 600px;" />
         </p>
 
         <h3>1. <strong>combine()</strong></h3>
