--- a/db_awkwardness.html
+++ b/db_awkwardness.html
@@ -74,7 +74,7 @@
 
         <p style="text-align:center;">
           <img width="512" alt="A stack of row-and-column tables"
-            src="images/db/database_tables.png">
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/db/database_tables.png">
         </p>
 
         <p style="text-align:center;">
