--- a/find_the_right_algorithm.html
+++ b/find_the_right_algorithm.html
@@ -29,7 +29,7 @@
       <section id="main_content" class="inner">
         
         <a href="https://github.com/brohrer/becca">
-          <img src="images/shoes.jpg" alt="Becca" style="height: 200px;" />
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/shoes.jpg" alt="Becca" style="height: 200px;" />
         </a>
         <br>
         <a href="https://brohrer.mcknote.com/zh-Hans/using_machine_learning/find_the_right_algorithm.html">
@@ -86,7 +86,7 @@
           <a href="https://studio.azureml.net/">Azure Machine Learning</a>.
         </p>
         <a href="https://azure.microsoft.com/en-us/documentation/articles/machine-learning-algorithm-cheat-sheet/">
-          <img src="images/cheat_sheet.png" alt="Azure ML cheat sheet" style="height: 400px;" />
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/cheat_sheet.png" alt="Azure ML cheat sheet" style="height: 400px;" />
         </a>
           
         <h4>3b.Choose An Algorithm – Dive Deeper</h4> 
