--- a/git_resources.html
+++ b/git_resources.html
@@ -31,7 +31,7 @@
         <a href="
         https://xkcd.com/1597/
         ">
-        <img src="images/git/git.png"
+        <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/git/git.png"
           alt="XKCD cartoon"
           title="If that doesn't fix it, git.txt contains the phone number of a friend of mine who understands git. Just wait through a few minutes of 'It's really pretty simple, just think of branches as...' and eventually you'll learn the commands that will fix everything." width=300>
         </a>
@@ -71,7 +71,7 @@
         <h3>
           Corey Schafer's YouTube tutorials
         </h3>
-        <img src="images/git/coreyschafer.png" width=400
+        <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/git/coreyschafer.png" width=400
           alt="Corey Schafer YouTube tutorial screenshot">
         </a>
         <p>
