--- a/gitlab_import.html
+++ b/gitlab_import.html
@@ -46,7 +46,7 @@
             </p>
             <p style="text-align:center;">
               <img title="Import options for GitLab projects"
-                src="images/gitlab/import_options.png"
+                src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/gitlab/import_options.png"
                 alt="Import options for GitLab projects"
                 style="height: 160px;">
             </p>
@@ -57,13 +57,13 @@
             </p>
             <p style="text-align:center;">
               <img title="Authenticate with GitHub"
-                src="images/gitlab/authenticate.png"
+                src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/gitlab/authenticate.png"
                 alt="Authenticate with GitHub"
                 style="height: 280px;">
             </p>
             <p style="text-align:center;">
               <img title="Authorize GitLab from GitHub"
-                src="images/gitlab/authorize.png"
+                src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/gitlab/authorize.png"
                 alt="Authorize GitLab from GitHub"
                 style="height: 320px;">
             </p>
@@ -75,7 +75,7 @@
             </p>
             <p style="text-align:center;">
               <img title="List of repositories to import"
-                src="images/gitlab/import_repositories.png"
+                src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/gitlab/import_repositories.png"
                 alt="List of repositories to import"
                 style="height: 240px;">
             </p>
@@ -89,7 +89,7 @@
             </p>
             <p style="text-align:center;">
               <img title="The imported project"
-                src="images/gitlab/imported_project.png"
+                src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/gitlab/imported_project.png"
                 alt="The imported project view"
                 style="height: 320px;">
             </p>
