--- a/grand_challenges_robotics.html
+++ b/grand_challenges_robotics.html
@@ -147,7 +147,7 @@
 
         <p style="text-align:center;">
           <img title="Drawing of a robot washing dishes"
-            src="images/SDSC_Keynote/dishwashing_robot.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/SDSC_Keynote/dishwashing_robot.png"
             alt="Drawing of a robot washing dishes"
             style="width: 600px;">
         </p>
@@ -207,7 +207,7 @@
 
         <p style="text-align:center;">
           <img title="Brushing a pup"
-            src="images/SDSC_keynote/brushing_pup.jpeg"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/SDSC_keynote/brushing_pup.jpeg"
             alt="Brushing a pup"
             style="width: 600px;">
             <em>Photo by Diane Rohrer</em>
