--- a/how_modeling_works_4.html
+++ b/how_modeling_works_4.html
@@ -39,8 +39,8 @@
 	  An example of <strong>interpolation</strong> is if we want to estimate the value of annual temperatures that are missing from the middle of our data set. In this case, we know several values both before and after. An example of <strong>extrapolation</strong> would be if we wanted to make estimates outside of the range of our original data - either for dates that come before or dates that come after. Another type of extrapolation would be applying the pattern to a different town nearby. In both cases, we would try to infer something about the world that extended beyond the reach of what we had measured.
  	</p>
 
-        <img src="images/how_modeling_works/interpolation.png" style="width: 600px;" />
-        <img src="images/how_modeling_works/extrapolation.png" style="width: 600px;" />
+        <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/how_modeling_works/interpolation.png" style="width: 600px;" />
+        <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/how_modeling_works/extrapolation.png" style="width: 600px;" />
 
         <p>
 	  If we wanted to divide our data set to test for interpolation performance, it would be straightforward. We could randomly sort every year's data into one of two bins, testing or training. This is what we did in part 1.
