--- a/how_modeling_works_5.html
+++ b/how_modeling_works_5.html
@@ -32,7 +32,7 @@
 	  Finally we've reached the question that probably brought you here: Which models should I try to fit to my data?
 	</p>
 
-	<img src="images/how_modeling_works/xkcd_curve_fitting.png" style="width: 400px;" />
+	<img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/how_modeling_works/xkcd_curve_fitting.png" style="width: 400px;" />
 
 	<p>
 	  <a href="https://www.xkcd.com/2048/">https://www.xkcd.com/2048/</a>
