--- a/images_to_video.html
+++ b/images_to_video.html
@@ -28,10 +28,10 @@
         <br>
         <br>
         <p>
-          <img src="images/im_to_video_before_0.png" style="height: 150px;" />
-          <img src="images/im_to_video_before_1.png" style="height: 150px;" />
-          <img src="images/im_to_video_before_2.png" style="height: 150px;" />
-          <img src="images/im_to_video_before_3.png" style="height: 150px;" />
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/im_to_video_before_0.png" style="height: 150px;" />
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/im_to_video_before_1.png" style="height: 150px;" />
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/im_to_video_before_2.png" style="height: 150px;" />
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/im_to_video_before_3.png" style="height: 150px;" />
         </p>
         <br>
         
