--- a/imposter_syndrome.html
+++ b/imposter_syndrome.html
@@ -57,7 +57,7 @@
         </p>
 
         <p>
-          <img src="images/ewok.jpg" alt="ewok" style="height: 375px;" />
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/ewok.jpg" alt="ewok" style="height: 375px;" />
           <br>
           Even Ewoks feel like imposters sometimes. (Photo courtesy of Diane Rohrer.)
         </p>
