--- a/laboratory.html
+++ b/laboratory.html
@@ -63,7 +63,7 @@
         <h3><em>k</em>-sparse neural network layer</h3></a>
         <p style="text-align:center;">
           <img title="The output representation of a few nodes from the hidden sparse layer"
-            src="images/sparsify/sparse_hidden_layer.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/sparsify/sparse_hidden_layer.png"
             alt="The output representation of a few nodes from the hidden sparse layer"
             style="height: 320px;">
         </p>
@@ -156,7 +156,7 @@
           <p>
             <br>
             <a href="https://creativecommons.org/publicdomain/zero/1.0/">
-              <img title="Creative Commons Zero license" src="images/cc0.png" alt="CC0" style="width: 90px;" />
+              <img title="Creative Commons Zero license" src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/cc0.png" alt="CC0" style="width: 90px;" />
             </a> &nbsp except where noted.
           </p>
           <p>
