--- a/linear_algebra_resources.html
+++ b/linear_algebra_resources.html
@@ -43,7 +43,7 @@
 
         <a href="https://www.youtube.com/playlist?list=PLZHQObOWTQDPD3MizzM2xVFitgF8hE_ab">
         <h3>3Blue1Brown, a.k.a. Grant Sanderson</h3>
-        <img src="images/linear_algebra_3blue1brown.png" width=600
+        <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/linear_algebra_3blue1brown.png" width=600
           alt="3 Blue 1 Brown You Tube playlist for linear algebra course">
         </a>
         <p>
@@ -75,7 +75,7 @@
 
         <a href="https://ocw.mit.edu/courses/mathematics/18-06-linear-algebra-spring-2010/">
         <h3>Gilbert Strang</h3>
-        <img src="images/linear_algebra_gil_strang.png"
+        <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/linear_algebra_gil_strang.png"
           alt="Gilbert Strang teaching 18.06 linear algebra" width=600>
         </a>
         <p>
