--- a/make_data_science_work_for_you.html
+++ b/make_data_science_work_for_you.html
@@ -28,7 +28,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         
-        <img src="images/supreme_pizza.jpg" alt="Pizza" style="height: 225px;" />
+        <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/supreme_pizza.jpg" alt="Pizza" style="height: 225px;" />
         <br>
         <a href="https://brohrer.mcknote.com/using_data/make_data_science_work_for_you.html">in Mandarin</a>
         by <a href="https://brohrer.mcknote.com/">Jimmy Lin</a>
