--- a/mindfulness_reading_list.html
+++ b/mindfulness_reading_list.html
@@ -23,7 +23,7 @@
           This is a micro book review, kicked off by a tweet:
         </p>
         <a href="" alt="Tweet about a focus-focused productivity self-help book">
-          <img src="images/reading_list_tweet.png" style="width: 600px;" />
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/reading_list_tweet.png" style="width: 600px;" />
         </a>
         <p>
           You suggested books:
