--- a/ml_solve_np_complete_problems.html
+++ b/ml_solve_np_complete_problems.html
@@ -35,7 +35,7 @@
         </p>   
         <a title="Rolling Hills [Creative Commons 2.0], by Jay Huang."
            href="https://www.flickr.com/photos/50663863@N02/25366514875">
-          <img alt="Rolling hills" src="images/rolling_hills.jpg" style="width: 440px;" />
+          <img alt="Rolling hills" src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/rolling_hills.jpg" style="width: 440px;" />
         </a>
         <p>
           An engineering solution is to walk upslope to the top of whatever hill you're on. You can also wander around the field at random in hopes of discovering other hills that you can summit.
