--- a/numba_tips.html
+++ b/numba_tips.html
@@ -528,7 +528,7 @@ def add(a, b, c):
         </p>
         <p style="text-align:center;">
           <img title="Screenshot of py-spy top"
-            src="images/pyspy.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/pyspy.png"
             alt="Screenshot of py-spy top"
             style="height: 500px;">
         </p>
