--- a/pocket_guide_data_science.html
+++ b/pocket_guide_data_science.html
@@ -66,7 +66,7 @@
         </p>
 
         <a href="https://www.youtube.com/embed/tKa0zDDDaQk">
-          <img src="images/how_to_do_data_science.png" alt="How to do data science" style="height: 400px;" />
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/how_to_do_data_science.png" alt="How to do data science" style="height: 400px;" />
         </a>
         
         <h2 id="organize_data">
