--- a/regularization.html
+++ b/regularization.html
@@ -70,7 +70,7 @@
           to go get your phone, your pup will wake up. You are in a pickle.
         </p>
         <p>
-          <img src="images/regularization/sleeping_pup.png" 
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/regularization/sleeping_pup.png" 
             alt="A seesaw with a dog sleeping on one end and a stick figure holding the other end in place."
             style="width: 600px;" />
         </p>
@@ -97,7 +97,7 @@
           what you hoped.
         </p>
         <p>
-          <img src="images/regularization/children.png" 
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/regularization/children.png" 
             alt="A seesaw with a dog sleeping on one end and two children sitting on it to balance it out."
             style="width: 600px;" />
         </p>
@@ -130,7 +130,7 @@
           influence their position much.
         </p>
         <p>
-          <img src="images/regularization/l2_regularization.png" 
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/regularization/l2_regularization.png" 
             alt="A seesaw with a dog sleeping on one end and two children sitting on itto balance it out. A curved object on top pushes them away from the edge and toward the center."
             style="width: 600px;" />
         </p>
@@ -163,7 +163,7 @@
           settling into that podcast for the duration of your puppy's nap.
         </p>
         <p>
-          <img src="images/regularization/l1_regularization.png" 
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/regularization/l1_regularization.png" 
             alt="A seesaw with a dog sleeping on one end and one child sitting on itto balance it out. A sloped object on top encourages them to migrate toward the center."
             style="width: 600px;" />
         </p>
@@ -307,7 +307,7 @@
           in Python in a lightweight neural network. It's a good time.
         </p>
         <p>
-          <img src="images/regularization/pup.png" 
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/regularization/pup.png" 
             alt="A sleeping Shih-Tzu" 
             style="width: 200px;" />
         </p>
