--- a/softmax.html
+++ b/softmax.html
@@ -22,7 +22,7 @@
         <h4>tl;dr</h4>
         <p style="text-align:center;">
           <img title="softmax definition"
-            src="images/softmax/def_01_eq.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/softmax/def_01_eq.png"
             alt="softmax definition"
             style="width: 600px;">
         </p>
@@ -78,7 +78,7 @@
         </p>
         <p style="text-align:center;">
           <img title="pmf example"
-            src="images/softmax/ex_pmf_00.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/softmax/ex_pmf_00.png"
             alt="pmf example"
             style="width: 600px;">
         </p>
@@ -101,7 +101,7 @@
 
         <p style="text-align:center;">
           <img title="pmf from counts illustration"
-            src="images/softmax/ex_pmf_01.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/softmax/ex_pmf_01.png"
             alt="pmf from counts illustration"
             style="width: 600px;">
         </p>
@@ -123,7 +123,7 @@
         </p>
         <p style="text-align:center;">
           <img title="pmf normalization"
-            src="images/softmax/def_02_eq.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/softmax/def_02_eq.png"
             alt="pmf normalization"
             style="width: 600px;">
         </p>
@@ -164,7 +164,7 @@
         </p>
         <p style="text-align:center;">
           <img title="softmax full definition"
-            src="images/softmax/def_03_eq.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/softmax/def_03_eq.png"
             alt="softmax full definition"
             style="width: 600px;">
         </p>
@@ -223,7 +223,7 @@
         </p>
         <p style="text-align:center;">
           <img title="pmf derivative, step 1"
-            src="images/softmax/d_pmf_01.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/softmax/d_pmf_01.png"
             alt="pmf derivative, part 1"
             style="width: 600px;">
         </p>
@@ -239,7 +239,7 @@
 
         <p style="text-align:center;">
           <img title="pmf derivative, step 2"
-            src="images/softmax/d_pmf_02.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/softmax/d_pmf_02.png"
             alt="pmf derivative, part 2"
             style="width: 600px;">
         </p>
@@ -250,7 +250,7 @@
 
         <p style="text-align:center;">
           <img title="pmf derivative, step 3"
-            src="images/softmax/d_pmf_03.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/softmax/d_pmf_03.png"
             alt="pmf derivative, part 3"
             style="width: 600px;">
         </p>
@@ -261,7 +261,7 @@
         </p>
         <p style="text-align:center;">
           <img title="pmf derivative, step 4"
-            src="images/softmax/d_pmf_04.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/softmax/d_pmf_04.png"
             alt="pmf derivative, part 4"
             style="width: 600px;">
         </p>
@@ -272,7 +272,7 @@
         </p>
         <p style="text-align:center;">
           <img title="pmf derivative, step 5"
-            src="images/softmax/d_pmf_05.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/softmax/d_pmf_05.png"
             alt="pmf derivative, part 5"
             style="width: 600px;">
         </p>
@@ -282,7 +282,7 @@
         </p>
         <p style="text-align:center;">
           <img title="pmf derivative, step 6"
-            src="images/softmax/d_pmf_06.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/softmax/d_pmf_06.png"
             alt="pmf derivative, part 6"
             style="width: 600px;">
         </p>
@@ -292,7 +292,7 @@
         </p>
         <p style="text-align:center;">
           <img title="pmf derivative, step 7"
-            src="images/softmax/d_pmf_07.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/softmax/d_pmf_07.png"
             alt="pmf derivative, part 7"
             style="width: 600px;">
         </p>
@@ -303,7 +303,7 @@
         </p>
         <p style="text-align:center;">
           <img title="Kronecker delta"
-            src="images/softmax/def_kronecker.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/softmax/def_kronecker.png"
             alt="Kronecker delta"
             style="width: 600px;">
         </p>
@@ -313,7 +313,7 @@
 
         <p style="text-align:center;">
           <img title="pmf derivative, step 8"
-            src="images/softmax/d_pmf_08.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/softmax/d_pmf_08.png"
             alt="pmf derivative, part 8"
             style="width: 600px;">
         </p>
@@ -324,7 +324,7 @@
         </p>
         <p style="text-align:center;">
           <img title="pmf derivative, step 9"
-            src="images/softmax/d_pmf_09.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/softmax/d_pmf_09.png"
             alt="pmf derivative, part 9"
             style="width: 600px;">
         </p>
@@ -343,7 +343,7 @@
         </p>
         <p style="text-align:center;">
           <img title="softmax derivative, step 1"
-            src="images/softmax/d_softmax_01.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/softmax/d_softmax_01.png"
             alt="softmax derivative, part 1"
             style="width: 600px;">
         </p>
@@ -353,7 +353,7 @@
         </p>
         <p style="text-align:center;">
           <img title="softmax derivative, step 2"
-            src="images/softmax/d_softmax_02.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/softmax/d_softmax_02.png"
             alt="softmax derivative, part 2"
             style="width: 600px;">
         </p>
@@ -362,7 +362,7 @@
         </p>
         <p style="text-align:center;">
           <img title="softmax derivative, step 3"
-            src="images/softmax/d_softmax_03.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/softmax/d_softmax_03.png"
             alt="softmax derivative, part 3"
             style="width: 600px;">
         </p>
@@ -373,7 +373,7 @@
         </p>
         <p style="text-align:center;">
           <img title="softmax derivative, step 4"
-            src="images/softmax/d_softmax_04.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/softmax/d_softmax_04.png"
             alt="softmax derivative, part 4"
             style="width: 600px;">
         </p>
@@ -392,7 +392,7 @@
         </p>
         <p style="text-align:center;">
           <img title="softmax backprop"
-            src="images/softmax/softmax_backprop.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/softmax/softmax_backprop.png"
             alt="softmax backprop"
             style="width: 600px;">
         </p>
@@ -422,7 +422,7 @@ grad = np.reshape(grad, (1, -1))</code></pre>
         </p>
         <p style="text-align:center;">
           <img title="softmax Jacobian, expanded"
-            src="images/softmax/softmax_jacobian_expanded.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/softmax/softmax_jacobian_expanded.png"
             alt="softmax Jacobian, expanded"
             style="width: 600px;">
         </p>
@@ -461,7 +461,7 @@ grad = np.reshape(grad, (1, -1))</code></pre>
         </p>
         <p style="text-align:center;">
           <img title="softmax Jacobian, expanded"
-            src="images/softmax/def_04_eq.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/softmax/def_04_eq.png"
             alt="softmax Jacobian, expanded"
             style="width: 600px;">
         </p>
