--- a/stats_resources.html
+++ b/stats_resources.html
@@ -29,7 +29,7 @@
         </p>
 
         <p>
-          <img src="images/stats_resources.png" style="width: 550px;" />
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/stats_resources.png" style="width: 550px;" />
         </p>
 
         <h3>Best</h3>
