--- a/stop_chasing_unicorns.html
+++ b/stop_chasing_unicorns.html
@@ -20,7 +20,7 @@
       <section id="main_content" class="inner">
         
         <a href="https://www.flickr.com/photos/rumpleteaser/2812559753">
-          <img src="images/unicorn.jpg" title="Image credit to rumpleteaser, Creative Commons"
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/unicorn.jpg" title="Image credit to rumpleteaser, Creative Commons"
           alt="unicorn" style="height: 200px;" />
         </a>
 
