--- a/batch_normalization.html
+++ b/batch_normalization.html
@@ -34,7 +34,7 @@
 
         <p style="text-align:center;">
           <img title="A normal distribution"
-            src="images/batch_norm/normal_dist.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/batch_norm/normal_dist.png"
             alt="A normal distribution"
             style="height: 400px;">
         </p>
@@ -45,7 +45,7 @@
 
         <p style="text-align:center;">
           <img title="A normal distribution with a non-zero mean"
-            src="images/batch_norm/normal_dist_shift.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/batch_norm/normal_dist_shift.png"
             alt="A normal distribution with a non-zero mean"
             style="height: 400px;">
         </p>
@@ -56,7 +56,7 @@
 
         <p style="text-align:center;">
           <img title="A bimodal distribution"
-            src="images/batch_norm/nonnormal_dist.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/batch_norm/nonnormal_dist.png"
             alt="A bimodal distribution"
             style="height: 400px;">
         </p>
@@ -68,7 +68,7 @@
 
         <p style="text-align:center;">
           <img title="Shifting by subtracting the mean"
-            src="images/batch_norm/mean_removal.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/batch_norm/mean_removal.png"
             alt="Shifting by subtracting the mean"
             style="height: 400px;">
         </p>
@@ -80,7 +80,7 @@
 
         <p style="text-align:center;">
           <img title="Scaling by dividing by the standard deviation"
-            src="images/batch_norm/unit_var.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/batch_norm/unit_var.png"
             alt="Scaling by dividing by the standard deviation"
             style="height: 400px;">
         </p>
@@ -92,7 +92,7 @@
 
         <p style="text-align:center;">
           <img title="Normalization of a non-normal distribution"
-            src="images/batch_norm/irregular_normalized.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/batch_norm/irregular_normalized.png"
             alt="Normalization of a non-normal distribution"
             style="height: 400px;">
         </p>
@@ -104,7 +104,7 @@
 
         <p style="text-align:center;">
           <img title="A collection of draws from the same distribution"
-            src="images/batch_norm/dist_variability.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/batch_norm/dist_variability.png"
             alt="A collection of draws from the same distribution"
             style="height: 400px;">
         </p>
@@ -123,7 +123,7 @@
 
         <p style="text-align:center;">
           <img title="Zero mean, unit variance normalization"
-            src="images/batch_norm/eq_batch_norm_no_affine.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/batch_norm/eq_batch_norm_no_affine.png"
             alt="Zero mean, unit variance normalization"
             style="height: 160px;">
         </p>
@@ -134,7 +134,7 @@
 
         <p style="text-align:center;">
           <img title="Element-by-element normalization"
-            src="images/batch_norm/element_wise_normalization.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/batch_norm/element_wise_normalization.png"
             alt="Element-by-element normalization"
             style="height: 400px;">
         </p>
@@ -151,7 +151,7 @@
 
         <p style="text-align:center;">
           <img title="Definition of batch norm, including beta and gamma"
-            src="images/batch_norm/eq_batch_norm.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/batch_norm/eq_batch_norm.png"
             alt="Definition of batch norm, including beta and gamma"
             style="height: 160px;">
         </p>
@@ -193,7 +193,7 @@
 
         <p style="text-align:center;">
           <img title="Screenshot from David C Page's batchnorm post"
-            src="images/batch_norm/david_c_page_before_after.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/batch_norm/david_c_page_before_after.png"
             alt="Screenshot from David C Page's batchnorm post"
             style="height: 200px;">
         </p>
