--- a/becca_template.html
+++ b/becca_template.html
@@ -20,7 +20,7 @@
       <section id="main_content" class="inner">
         
         <a href="https://github.com/brohrer/becca">
-          <img title="Becca GitHub repository" src="images/logo_plate.png" alt="Becca" style="width: 440px;" />
+          <img title="Becca GitHub repository" src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/logo_plate.png" alt="Becca" style="width: 440px;" />
         </a>
 
         <p>
