--- a/commit.html
+++ b/commit.html
@@ -29,7 +29,7 @@
       <section id="main_content" class="inner">
         
         <a href="https://github.com/brohrer/becca">
-          <img src="images/boulderer.jpg" alt="Boulderer" style="height: 160px;" />
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/boulderer.jpg" alt="Boulderer" style="height: 160px;" />
         </a>
 
         <p>
