--- a/convolution_one_d.html
+++ b/convolution_one_d.html
@@ -24,7 +24,7 @@
           allowfullscreen></iframe>
         <p style="text-align:center;">
           <img title="Convolution showing kernel being reproduced by delta function"
-            src="images/conv1d/aa_copy.gif"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/conv1d/aa_copy.gif"
             alt="Convolution showing kernel being reproduced by delta function"
             style="height: 300px;">
         </p>
@@ -73,7 +73,7 @@
 
         <p style="text-align:center;">
           <img title="Convolution showing kernel being reproduced by several delta functions"
-            src="images/conv1d/bb_copy.gif"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/conv1d/bb_copy.gif"
             alt="Convolution showing kernel being reproduced by several delta functions"
             style="height: 300px;">
         </p>
@@ -119,7 +119,7 @@
 
         <p style="text-align:center;">
           <img title="Signal and kernel definitions"
-            src="images/conv1d/defs_1_eq.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/conv1d/defs_1_eq.png"
             alt="Signal and kernel definitions"
             style="width: 600px;">
         </p>
@@ -135,7 +135,7 @@
 
         <p style="text-align:center;">
           <img title="Signal and kernel definitions"
-            src="images/conv1d/defs_2_eq.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/conv1d/defs_2_eq.png"
             alt="Signal and kernel definitions"
             style="width: 600px;">
         </p>
@@ -149,7 +149,7 @@
 
         <p style="text-align:center;">
           <img title="Convolution calculations, longhand"
-            src="images/conv1d/conv_long_1_eq.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/conv1d/conv_long_1_eq.png"
             alt="Convolution calculations, longhand"
             style="width: 600px;">
         </p>
@@ -163,7 +163,7 @@
 
         <p style="text-align:center;">
           <img title="Convolution calculations, with summations"
-            src="images/conv1d/conv_sum_eq.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/conv1d/conv_sum_eq.png"
             alt="Convolution calculations, with summations"
             style="width: 600px;">
         </p>
@@ -174,7 +174,7 @@
 
         <p style="text-align:center;">
           <img title="Convolution definition"
-            src="images/conv1d/conv_1_eq.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/conv1d/conv_1_eq.png"
             alt="Convolution definition"
             style="width: 600px;">
         </p>
@@ -262,7 +262,7 @@
 
         <p style="text-align:center;">
           <img title="Calculation of the input gradient"
-            src="images/conv1d/input_grad_1_eq.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/conv1d/input_grad_1_eq.png"
             alt="Calulation of the input gradient"
             style="width: 600px;">
         </p>
@@ -277,7 +277,7 @@
 
         <p style="text-align:center;">
           <img title="More calculation of the input gradient"
-            src="images/conv1d/input_grad_2_eq.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/conv1d/input_grad_2_eq.png"
             alt="More calulation of the input gradient"
             style="width: 600px;">
         </p>
@@ -289,7 +289,7 @@
 
         <p style="text-align:center;">
           <img title="Yet more calculation of the input gradient"
-            src="images/conv1d/input_grad_3_eq.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/conv1d/input_grad_3_eq.png"
             alt="Yet more calulation of the input gradient"
             style="width: 600px;">
         </p>
@@ -300,7 +300,7 @@
 
         <p style="text-align:center;">
           <img title="Even more calculation of the input gradient"
-            src="images/conv1d/input_grad_4_eq.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/conv1d/input_grad_4_eq.png"
             alt="Even more calulation of the input gradient"
             style="width: 600px;">
         </p>
@@ -312,7 +312,7 @@
 
         <p style="text-align:center;">
           <img title="Simplified calculation of the input gradient"
-            src="images/conv1d/input_grad_5_eq.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/conv1d/input_grad_5_eq.png"
             alt="Simplified calulation of the input gradient"
             style="width: 600px;">
         </p>
@@ -329,7 +329,7 @@
 
         <p style="text-align:center;">
           <img title="Concise calculation of the input gradient"
-            src="images/conv1d/input_grad_6_eq.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/conv1d/input_grad_6_eq.png"
             alt="Concise calulation of the input gradient"
             style="width: 600px;">
         </p>
@@ -343,7 +343,7 @@
 
         <p style="text-align:center;">
           <img title="Calculation of the parameter gradient"
-            src="images/conv1d/param_grad_1_eq.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/conv1d/param_grad_1_eq.png"
             alt="Calulation of the parameter gradient"
             style="width: 600px;">
         </p>
@@ -357,7 +357,7 @@
 
         <p style="text-align:center;">
           <img title="Expanded calculation of the parameter gradient"
-            src="images/conv1d/param_grad_2_eq.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/conv1d/param_grad_2_eq.png"
             alt="Expanded calulation of the parameter gradient"
             style="width: 600px;">
         </p>
@@ -368,7 +368,7 @@
 
         <p style="text-align:center;">
           <img title="Calculation of the parameter gradient, derivatives"
-            src="images/conv1d/param_grad_3_eq.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/conv1d/param_grad_3_eq.png"
             alt="Calulation of the parameter gradient, derivatives"
             style="width: 600px;">
         </p>
@@ -380,7 +380,7 @@
 
         <p style="text-align:center;">
           <img title="Calculation of the parameter gradient, simplified"
-            src="images/conv1d/param_grad_4_eq.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/conv1d/param_grad_4_eq.png"
             alt="Calulation of the parameter gradient, simplified"
             style="width: 600px;">
         </p>
@@ -398,7 +398,7 @@
 
         <p style="text-align:center;">
           <img title="Calculation of the parameter gradient, concise"
-            src="images/conv1d/param_grad_5_eq.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/conv1d/param_grad_5_eq.png"
             alt="Calulation of the parameter gradient, concise"
             style="width: 600px;">
         </p>
@@ -414,7 +414,7 @@
 
         <p style="text-align:center;">
           <img title="Convolution signal padded with zeroes"
-            src="images/conv1d/pad_zeros.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/conv1d/pad_zeros.png"
             alt="Convolution signal padded with zeroes"
             style="width: 600px;">
         </p>
@@ -439,7 +439,7 @@
 
         <p style="text-align:center;">
           <img title="Convolution signal padded with constant values"
-            src="images/conv1d/pad_const.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/conv1d/pad_const.png"
             alt="Convolution signal padded with constant values"
             style="width: 600px;">
         </p>
@@ -461,7 +461,7 @@
 
         <p style="text-align:center;">
           <img title="Convolution signal padded with mirrored values"
-            src="images/conv1d/pad_mirror.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/conv1d/pad_mirror.png"
             alt="Convolution signal padded with with mirrored values"
             style="width: 600px;">
         </p>
@@ -479,7 +479,7 @@
 
         <p style="text-align:center;">
           <img title="Convolution signal padded with circular shifting"
-            src="images/conv1d/pad_circular.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/conv1d/pad_circular.png"
             alt="Convolution signal padded with circular shifting"
             style="width: 600px;">
         </p>
@@ -506,7 +506,7 @@
 
         <p style="text-align:center;">
           <img title="Convolution signal unpadded"
-            src="images/conv1d/no_pad.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/conv1d/no_pad.png"
             alt="Convolution signal unpadded"
             style="width: 600px;">
         </p>
@@ -569,21 +569,21 @@
 
         <p style="text-align:center;">
           <img title="Convolution with stride 1"
-            src="images/conv1d/stride_1.gif"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/conv1d/stride_1.gif"
             alt="Convolution with stride 1"
             style="width: 400px;">
         </p>
 
         <p style="text-align:center;">
           <img title="Convolution with stride 2"
-            src="images/conv1d/stride_2.gif"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/conv1d/stride_2.gif"
             alt="Convolution with stride 2"
             style="width: 400px;">
         </p>
 
         <p style="text-align:center;">
           <img title="Convolution with stride 4"
-            src="images/conv1d/stride_4.gif"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/conv1d/stride_4.gif"
             alt="Convolution with stride 4"
             style="width: 400px;">
         </p>
@@ -653,7 +653,7 @@
 
         <p style="text-align:center;">
           <img title="Multi-channel convolution"
-            src="images/conv1d/multichannel.gif"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/conv1d/multichannel.gif"
             alt="Multi-channel convolution"
             style="width: 600px;">
         </p>
@@ -668,7 +668,7 @@
 
         <p style="text-align:center;">
           <img title="Multichannel convolution equations"
-            src="images/conv1d/conv_multichannel_eq.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/conv1d/conv_multichannel_eq.png"
             alt="Multichannel convolution equations"
             style="width: 600px;">
         </p>
@@ -722,7 +722,7 @@
 
         <p style="text-align:center;">
           <img title="Convolution equations with bias"
-            src="images/conv1d/conv_bias_eq.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/conv1d/conv_bias_eq.png"
             alt="Convolution equations with bias"
             style="width: 600px;">
         </p>
