--- a/five_questions_data_science_answers.html
+++ b/five_questions_data_science_answers.html
@@ -29,7 +29,7 @@
       <section id="main_content" class="inner">
         
         <a href="https://github.com/brohrer/becca">
-          <img src="images/magnifying_glass.png" alt="Magnifying glass" style="height: 160px;" />
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/magnifying_glass.png" alt="Magnifying glass" style="height: 160px;" />
         </a>
         <br>
         <a href="https://brohrer.mcknote.com/using_machine_learning/five_questions_data_science_answers.html">in Mandarin</a>
