--- a/how_backpropagation_works.html
+++ b/how_backpropagation_works.html
@@ -37,7 +37,7 @@
 
         <h3>Backpropagation from scratch</h3>
         <p>
-          <img src="images/backprop/system.png" 
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/backprop/system.png" 
             alt="A shower and the plumbing system behind it. A shower handle valve, house pipe, a main valve, and the water main."
             style="width: 600px;" />
         </p>
@@ -55,7 +55,7 @@
 
         <h3>Sensitivity</h3>
         <p>
-          <img src="images/backprop/handle.png" 
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/backprop/handle.png" 
             alt="Shower handle with positions numbered and shower flow rate with numbered levels."
             style="width: 600px;" />
         </p>
@@ -75,7 +75,7 @@
           The terminology quickly becomes awkward. Luckily math helps us out here. Sensitivity is change in one thing per a one unit change in another thing, change in shower flow rate per one unit change in the shower handle position for instance. This can be written &Delta; shower flow rate divided by &Delta; shower handle setting. &Delta;, the capital Greek d, is a common way to indicate a change in a variable. Or, if we want to talk about the relationship between very small changes in both of these items, we can use the calculus notation of d(showerhead flow rate) divided by d(shower handle position). This is a way to express the derivative of the shower flow rate with respect to the shower handle setting. Since the flow rate is actually sensitive to two different things, the shower handle setting and the house flow rate going into the shower handle, it is most accurate to write sensitivity as &part;(showerhead flow rate) divided by &part; (shower handle position). This means the partial derivative of shower flow rate with respect to shower handle setting. But they all mean the same thing. Conceptually we’re just expressing the sensitivity of the thing on top to changes of the thing on the bottom. Because they are the most technically correct and because they look cool, we'll use the curly D’s: &part;. 
         </p>
         <p>
-          <img src="images/backprop/sensitivity.png" 
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/backprop/sensitivity.png" 
             alt="A collection of mathematical expressions of sensitivity."
             style="width: 600px;" />
         </p>
@@ -85,7 +85,7 @@
 
         <h3>Working backward</h3>
         <p>
-          <img src="images/backprop/main_valve.png" 
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/backprop/main_valve.png" 
             alt="Main valve with positions numbered and house flow rate with numbered levels."
             style="width: 600px;" />
         </p>
@@ -93,7 +93,7 @@
           We can also find the sensitivity for the main house valve. We can measure both the main valve position m and the resulting house flow rate x and we can observe how the latter changes when we adjust the former.  By dividing our change in x by our change in m, we can calculate the sensitivity of house flow rate to main valve setting, &part;x/&part;h.
         </p>
         <p>
-          <img src="images/backprop/house_flow.png" 
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/backprop/house_flow.png" 
             alt="Shower handle with house flow rate and shower flow rate numbered."
             style="width: 600px;" />
         </p>
@@ -119,7 +119,7 @@
 
         <h3>How far from ideal is the shower?</h3>
         <p>
-          <img src="images/backprop/error.png" 
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/backprop/error.png" 
             alt="Difference between actual and desired shower flow rate defined as error."
             style="width: 600px;" />
         </p>
@@ -136,7 +136,7 @@
           Now we can chain this with our other sensitivities to find the sensitivity of the error to our two valve positions. 
         </p>
         <p>
-          <img src="images/backprop/abs_value.png" 
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/backprop/abs_value.png" 
             alt="Plot of absolute error and its derivative."
             style="width: 600px;" />
         </p>
@@ -157,7 +157,7 @@
           There are three good reasons not to do this. 
         </p>
         <p>
-          <img src="images/backprop/justification.png" 
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/backprop/justification.png" 
             alt="Multiple plots of sensitivity of y to h, shown for different values of m"
             style="width: 600px;" />
         </p>
@@ -174,12 +174,12 @@
           The safest way to handle an uncertain, nonlinear, dynamic situation like this is to take tiny steps. Instead of trying to move the whole distance all at once, move 1/100, or 1/1000, or 1/10,000 of the way. It means that you have to make a lot of steps, but at least your chances of settling into a good answer are much better. This fraction of the distance that we choose to nibble is called the learning rate. Choosing a learning rate that is too large will cause us to bounce around wildly without finding a viable solution. A learning rate that is too small will take an unreasonably long time to reach a solution. The baby steps will just be too tiny. A learning rate of 1/1000 is not a bad place to start, but keep in mind that the ideal learning rate will be different for every problem you try. 
         </p>
         <p>
-          <img src="images/backprop/big_steps.png" 
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/backprop/big_steps.png" 
             alt="Too large adjustments make the error get worse"
             style="width: 600px;" />
         </p>
         <p>
-          <img src="images/backprop/small_steps.png" 
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/backprop/small_steps.png" 
             alt="Too small adjustments take a long time to reach their goal"
             style="width: 600px;" />
         </p>
@@ -192,7 +192,7 @@
           So for our first iteration, our adjustment to the shower handle, &Delta;h1, is &minus;&eta; &times; &part;E/&part;y &times; &part;y/&part;h. Similarly, the change to the main valve, &Delta;m1, is &minus;&eta; &times; &part;E/&part;y &times; &part;y/&part;x &times; &part;x/&part;m. 
         </p>
         <p>
-          <img src="images/backprop/update_rule.png" 
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/backprop/update_rule.png" 
             alt="Plumbing system shown with update rules for adjusting both valves."
             style="width: 600px;" />
         </p>
@@ -211,7 +211,7 @@
 
         <h3>Gradient descent and other learning rate schedules</h3>
         <p>
-          <img src="images/backprop/gradient_descent.png" 
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/backprop/gradient_descent.png" 
             alt="Gradient descent is taking a steps in the downhill direction of the error landscape"
             style="width: 600px;" />
         </p>
