--- a/how_linear_regression_works.html
+++ b/how_linear_regression_works.html
@@ -43,31 +43,31 @@
           At the jewelry store, I find that there are no 1.35 carat diamonds to price. Undeterred, I pull out a pen and paper and write down the prices and weights of every diamond in the case.
         </p>
         <a href="https://youtu.be/fE0bnkNX77A">
-          <img src="images/linear_regression/linear_regression_1.png" style="width: 300px;" />
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/linear_regression/linear_regression_1.png" style="width: 300px;" />
         </a>
         <p>
           I note that the weights don't go much higher than 2 carats and draw a horizontal number line that will accommodate them.
         </p>
         <a href="https://youtu.be/fE0bnkNX77A?t=1m10s">
-          <img src="images/linear_regression/linear_regression_2.png" style="width: 440px;" />
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/linear_regression/linear_regression_2.png" style="width: 440px;" />
         </a>
         <p>
           I also draw a vertical number line that goes from zero to more than the highest price in the case. 
         </p>
         <a href="https://youtu.be/fE0bnkNX77A?t=1m24s">
-          <img src="images/linear_regression/linear_regression_3.png" style="width: 440px;" />
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/linear_regression/linear_regression_3.png" style="width: 440px;" />
         </a>
         <p>
           These are my coordinate axes. In a city with gridded streets like Manhattan, you can identify any intersection just by giving its East-West street and North-South avenue. In the same way, coordinate axes let you name any point by where it hits the horizontal and the vertical axis. This lets me plot my first data point by finding its weight, drawing a vertical line up, finding its price, drawing a horizontal line over, and putting a dot where they cross. 
         </p>
         <a href="https://youtu.be/fE0bnkNX77A?t=1m39s">
-          <img src="images/linear_regression/linear_regression_4.png" style="width: 440px;" />
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/linear_regression/linear_regression_4.png" style="width: 440px;" />
         </a>
         <p>
           I can repeat this with the weights and prices of all the other diamonds. 
         </p>
         <a href="https://youtu.be/fE0bnkNX77A?t=2m08s">
-          <img src="images/linear_regression/linear_regression_5.png" style="width: 440px;" />
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/linear_regression/linear_regression_5.png" style="width: 440px;" />
         </a>
         <p>
           This turns my list of prices and weights into a picture. So far I haven't added any new information or thrown any information away. I've just changed it to another form. The data is now a picture. 
@@ -75,7 +75,7 @@
           The picture has an obvious shape to it. It looks like a wide fuzzy line going up and to the right. My next step is to draw a straight line through the middle of it. There are roughly equal numbers of data points on each side of the line, and it hugs the middle of the swath of data.
         </p>
         <a href="https://youtu.be/fE0bnkNX77A?t=3m25s">
-          <img src="images/linear_regression/linear_regression_6.png" style="width: 440px;" />
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/linear_regression/linear_regression_6.png" style="width: 440px;" />
         </a>
         <p>
           Drawing a line through the data is a very significant step. Although the line may seem obvious to us, that is only because we have supercomputer-quantities of neural computing power dedicated to seeing patterns. By drawing a line, I've distilled a collection of points down to a simplified version of itself, the same way a cartoon is a simplified version of a realistic image. In this step, I actually do throw away some of the information in the data, but in return I get a simplified story that I can use to answer questions. Finding the curve that best fits your data is called regression, and when that curve is a straight line, it's called linear regression.
@@ -84,19 +84,19 @@
           With a linear model in place, I can finally answer my question, "How much will a 1.35 carat diamond cost me?" To do this, I eyeball a vertical line up from the 1.35 carat point on the weight axis. From where it crosses my linear model, I eyeball a horizontal line over to the price axis. It hits at about the $8000 mark. Question answered! 
         </p>
         <a href="https://youtu.be/fE0bnkNX77A?t=5m24s">
-          <img src="images/linear_regression/linear_regression_7.png" style="width: 440px;" />
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/linear_regression/linear_regression_7.png" style="width: 440px;" />
         </a>
         <p>
           To make the answer even more helpful, I note that most of the diamonds don't fall right on the line. That means my 1.35 carat diamond will probably not cost exactly $8000. My obvious next question is "How close to $8000 will it be?" To estimate this, I draw a wide envelope around my line that encompasses most (about 95%) of my data points. 
         </p>
         <a href="https://youtu.be/fE0bnkNX77A?t=6m00s">
-          <img src="images/linear_regression/linear_regression_8.png" style="width: 440px;" />
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/linear_regression/linear_regression_8.png" style="width: 440px;" />
         </a>
         <p>
           I'm pretty confident (about 95%) that any future diamonds I come across will fall somewhere in this envelope. To find out what this means for my diamond, I eyeball two more horizontal lines where the 1.35 carat line crosses my confidence envelope on the high and low side.
         </p>
         <a href="https://youtu.be/fE0bnkNX77A?t=6m44s">
-          <img src="images/linear_regression/linear_regression_9.png" style="width: 440px;" />
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/linear_regression/linear_regression_9.png" style="width: 440px;" />
         </a>
         <p>
           Now I see that I can be fairly confident that my diamond will cost more than $5800, but less than $10,200. Armed with this information, I can make a plan about how much to save from each paycheck for how long before I can restore my grandmother's ring.
