--- a/how_modeling_works_1.html
+++ b/how_modeling_works_1.html
@@ -31,62 +31,62 @@
 	  Let’s fit a model to some data. These are the annual temperatures for the last 120 years in a fictional Midwestern town. There’s one point per year, the annual median of the daily high temperatures. When we look at it, our eye is really good at pulling out a pattern. There’s a clear lift toward the right hand side. We would like to capture that in a model.
         </p>
 
-        <img src="images/how_modeling_works/Typical_daily_highs.png" style="width: 600px;" />
+        <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/how_modeling_works/Typical_daily_highs.png" style="width: 600px;" />
 
         <p>
 	  There are a lot of models that can represent this. A really nice starting point, because it's so simple, is a straight line. Here’s what the best fit straight line looks like. It does a pretty good job. We can see that it definitely captures the upward tilt of the data, but it doesn’t capture the bend in it. It’s clear when we examine it, that a straight line doesn’t do quite as well as we would like.
         </p>
 
-        <img src="images/how_modeling_works/Linear_model.png" style="width: 600px;" />
+        <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/how_modeling_works/Linear_model.png" style="width: 600px;" />
 
         <p>
 	  Luckily, we have a lot of other options. A reasonable next candidate is a quadratic, a polynomial with a squared term instead of just a linear term. These have curvature to them. We can see that the best fit quadratic clearly captures the lift at the right hand side of the plot and the bend in the middle, but it also imposes a little lift on the left-hand side of the plot which is not obviously reflected in the data.
         </p>
 
-        <img src="images/how_modeling_works/Quadratic_model.png" style="width: 600px;" />
+        <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/how_modeling_works/Quadratic_model.png" style="width: 600px;" />
 
         <p>
 	  So, we can try other options. We can try polynomials with cubic terms, powers of three.
         </p>
 
-        <img src="images/how_modeling_works/Cubic_model.png" style="width: 600px;" />
+        <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/how_modeling_works/Cubic_model.png" style="width: 600px;" />
 
         <p>
 	  Or we can look at a polynomial with quartic terms, powers of four.
 	</p>
 	 
-        <img src="images/how_modeling_works/Quartic_model.png" style="width: 600px;" />
+        <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/how_modeling_works/Quartic_model.png" style="width: 600px;" />
 
 	<p>
 	  We can also fit polynomial models of order five,
 	</p>
 	
-        <img src="images/how_modeling_works/Quintic_model.png" style="width: 600px;" />
+        <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/how_modeling_works/Quintic_model.png" style="width: 600px;" />
 	
 	<p>
 	  polynomials of order six,
 	</p>
 	
-        <img src="images/how_modeling_works/Sextic_model.png" style="width: 600px;" />
+        <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/how_modeling_works/Sextic_model.png" style="width: 600px;" />
 	
 	<p>
 	  seventh order polynomials,
 	</p>
 	
-        <img src="images/how_modeling_works/Septic_model.png" style="width: 600px;" />
+        <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/how_modeling_works/Septic_model.png" style="width: 600px;" />
 
 	<p>
 	  and eighth order polynomials, also called <em>octic polynomials</em> (a useful tidbit for filling lulls in conversation at parties).
         </p>
 
-        <img src="images/how_modeling_works/Octic_model.png" style="width: 600px;" />
+        <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/how_modeling_works/Octic_model.png" style="width: 600px;" />
 
         <p>
 	  Now the fit appears to be getting better, but the line is taking on extra personality. It’s adopting wiggles.
 	  If we take this to an extreme, we can imagine a model that passes through every single data point perfectly. This model would have zero error, zero deviation from our measured data. So does that make it the best fit model?
         </p>
 
-        <img src="images/how_modeling_works/Interpolation_model.png" style="width: 600px;" />
+        <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/how_modeling_works/Interpolation_model.png" style="width: 600px;" />
 
         <p>
 	  Models are useful because they allow us to generalize from one situation to another. When we use a model, we’re working under the assumption that there is some underlying pattern we want to measure, but it has some error on top of it. The goal of a good model is to look through the error and find the pattern.
@@ -101,23 +101,23 @@
 	  Then, we can go back to our collection of model candidates and try them one by one. Here are a few of the models, trained on the training data, plotted with the testing data.
 	</p>
 
-        <img src="images/how_modeling_works/Linear_model_test.png" style="width: 400px;" />
-        <img src="images/how_modeling_works/Quadratic_model_test.png" style="width: 400px;" />
-        <img src="images/how_modeling_works/Cubic_model_test.png" style="width: 400px;" />
-        <img src="images/how_modeling_works/Quintic_model_test.png" style="width: 400px;" />
-        <img src="images/how_modeling_works/Octic_model_test.png" style="width: 400px;" />
+        <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/how_modeling_works/Linear_model_test.png" style="width: 400px;" />
+        <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/how_modeling_works/Quadratic_model_test.png" style="width: 400px;" />
+        <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/how_modeling_works/Cubic_model_test.png" style="width: 400px;" />
+        <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/how_modeling_works/Quintic_model_test.png" style="width: 400px;" />
+        <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/how_modeling_works/Octic_model_test.png" style="width: 400px;" />
 
         <p>
 	  As the models get higher order, we can see that the wiggles they have developed may have been helpful for fitting the training data, but don't necessarily help them fit the testing data better. We can see an extreme example of this in the full interpolation model, where we just connect all the training data points with straight lines. It really struggles to match the testing data points
 	</p>
 
-        <img src="images/how_modeling_works/Interpolation_model_test.png" style="width: 400px;" />
+        <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/how_modeling_works/Interpolation_model_test.png" style="width: 400px;" />
 
 	<p>
 	  It's helpful to look at the error on the training and testing data sets for each model lined up side by side.
 	</p>
 	
-        <img src="images/how_modeling_works/fit_errors.png" style="width: 600px;" />
+        <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/how_modeling_works/fit_errors.png" style="width: 600px;" />
 	<p>
 	  Looking at the errors on the training data set, a few things jump right out. First is the wide gap between the training errors (hollow circles) and testing errors (solid circles). Right away we can see that there is a substantial difference between the two data sets.
 	</p>
