--- a/how_modeling_works_2.html
+++ b/how_modeling_works_2.html
@@ -52,7 +52,7 @@
 	  This was the case when we fit a straight line to our temperature data. It didn’t capture the underlying pattern well, and because of that, had a much higher error then the rest of our candidates.
         </p>
 
-        <img src="images/how_modeling_works/Linear_model.png" style="width: 600px;" />
+        <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/how_modeling_works/Linear_model.png" style="width: 600px;" />
 
         <p>
 	  A linear model fit to this data has high bias.
@@ -63,13 +63,13 @@
 	  When we try to generalize and apply or model to a new situation, it will have extra error. This is also called <strong>overfitting</strong>. The more complex our model, the greater the risk of overfitting. This was the case in the connect-the-dots interpolation model.
         </p>
 
-        <img src="images/how_modeling_works/Interpolation_model.png" style="width: 600px;" />
+        <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/how_modeling_works/Interpolation_model.png" style="width: 600px;" />
 
         <p>
 	  Overfitting is tempting. Don’t fall for it.
         </p>
 
-	<img src="images/how_modeling_works/xkcd_linear_regression.png" style="width: 400px;" />
+	<img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/how_modeling_works/xkcd_linear_regression.png" style="width: 400px;" />
 
         <p>
 	  <em>The 95% confidence interval suggests Rexthor's dog could also be a cat, or possibly a teapot.</em>
