--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </td>
             <td>
               <a href="blog.html">
-                <img src="images/pen.png" 
+                <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/pen.png" 
                 alt="blog" style="height: 55px;">
               </a>          
             </td>
@@ -45,7 +45,7 @@
             </td>
             <td>
               <a href="http://www.youtube.com/c/BrandonRohrer">
-                <img src="images/youtube.jpeg" 
+                <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/youtube.jpeg" 
                 alt="Videos" style="height: 45px;">
               </a>
             </td>
@@ -57,7 +57,7 @@
             </td>
             <td>
               <a href="https://twitter.com/_brohrer_">
-                <img src="images/twitter_icon_color.png" 
+                <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/twitter_icon_color.png" 
                 alt="Twitter" style="height: 60px;">
               </a>
             </td>
@@ -69,7 +69,7 @@
             </td>
             <td>
               <a href="https://www.linkedin.com/in/brohrer">
-                <img src="images/linkedin.png" 
+                <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/linkedin.png" 
                 alt="LinkedIn profile" style="height: 60px;">
               </a>
             </td>
