--- a/one_step_program_become_data_scientist.html
+++ b/one_step_program_become_data_scientist.html
@@ -28,7 +28,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         
-        <img src="images/build_stuff.png" alt="Build Stuff" style="height: 225px;" />
+        <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/build_stuff.png" alt="Build Stuff" style="height: 225px;" />
 
         <br>
         <a href="https://dspedia.com/ar/%D9%83%D9%8A%D9%81-%D8%A3%D8%B5%D8%A8%D8%AD-%D8%B9%D8%A7%D9%84%D9%85%D8%A7-%D9%81%D9%8A-%D9%85%D8%AC%D8%A7%D9%84-%D8%A7%D9%84%D8%A8%D9%8A%D8%A7%D9%86%D8%A7%D8%AA-%D8%A8%D8%AE%D8%B7%D9%88%D8%A9-%D9%88/">
