--- a/oversimplify.html
+++ b/oversimplify.html
@@ -21,7 +21,7 @@
         
         <a title="Zen Stones by George Hodan, CC0 Public Domain"
            href="http://www.publicdomainpictures.net/view-image.php?image=78457&picture=zen-stones">
-          <img src="images/zen_stones.jpg" alt="zen stones" style="height: 275px;" />
+          <img src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/zen_stones.jpg" alt="zen stones" style="height: 275px;" />
         </a>  
         <p>
         A competent data scientist can make models and plots. A great data scientist can also help make decisions.
