--- a/robot_brain_project.html
+++ b/robot_brain_project.html
@@ -172,7 +172,7 @@
           <p>
             <br>
             <a href="https://creativecommons.org/publicdomain/zero/1.0/">
-              <img title="Creative Commons Zero license" src="images/cc0.png" alt="CC0" style="width: 90px;" />
+              <img title="Creative Commons Zero license" src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/cc0.png" alt="CC0" style="width: 90px;" />
             </a> &nbsp except where noted.
           </p>
         </section>
