--- a/sparsify_layer.html
+++ b/sparsify_layer.html
@@ -143,7 +143,7 @@
         </p>
         <p style="text-align:center;">
           <img title="The output representation of a few nodes from the hidden dense layer"
-            src="images/sparsify/dense_hidden_layer.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/sparsify/dense_hidden_layer.png"
             alt="The output representation of a few nodes from the hidden dense layer"
             style="height: 320px;">
         </p>
@@ -154,7 +154,7 @@
         </p>
         <p style="text-align:center;">
           <img title="The output representation of a few nodes from the hidden sparse layer"
-            src="images/sparsify/sparse_hidden_layer.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/sparsify/sparse_hidden_layer.png"
             alt="The output representation of a few nodes from the hidden sparse layer"
             style="height: 320px;">
         </p>
